--- a/css/styles.css
+++ b/css/styles.css
@@ -177,8 +177,10 @@ body {
 
 .row_shuttlemap{
             //display:inline-table;
-            width: 50%;
-            border-bottom: 1px dotted black;
+            width: 32%;
+            height: 50%;
+            //border: 7px dotted black;
+            border: 4mm ridge rgb(8, 69, 126, 0.77);
 }
 
 .right-container{
