tweaking buttons and POST payment
-calculate button is redesigned with a new route functionality
-summary is created
-payment is adjusted by using fetch();
Praise God

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@
   background-color: #fefde5 !important;
 }
 
+.calculateButton{
+      visibility: hidden;
+      opacity: 1;
+}
+
 /**
  * Section for the form. Multi-step Form
  * how you can use CSS to style your Element's container. thanks to this nice developer
